# PA2D-fc

./: .gitignore  CMakeLists.txt  Filter.CHANGE.md  LICENSE.md  LICENSE.txt  README.md  pa2d.h
1.0.0-beta1/: README.md  pa2d.h
PA2D/: CMakeLists.txt
PA2D/include/: buffer.h  buffer_blender.h  canvas.h  color.h  compiler_compat.h  draw.h  draw_text.h  filter.h  geometry.h  image_loader.h  pa2d.h  style.h  version.h  window.h
PA2D/include/geometry/: circle.h  ellipse.h  line.h  path.h  point.h  points.h  polygon.h  ray.h  rect.h  sector.h  shape.h  triangle.h
PA2D/src/: buffer.cpp  buffer_blender.cpp  canvas.cpp  color.cpp  draw_text.cpp  filter.cpp  image_loader.cpp  style.cpp  version.cpp  window.cpp
PA2D/src/draw/: circle.cpp  ellipse.cpp  line.cpp  polygon.cpp  polyline.cpp  rect.cpp  roundRect.cpp  sector.cpp  triangle.cpp
PA2D/src/geometry/: circle.cpp  ellipse.cpp  line.cpp  path.cpp  point.cpp  points.cpp  polygon.cpp  ray.cpp  rect.cpp  sector.cpp  shape.cpp  triangle.cpp
PA2D/src/internal/: blend_utils.cpp  blend_utils.h
TESTS/: CMakeLists.txt  tests.cpp
examples/: SyncCanvas.cpp  clock_demo.cpp  file_drop.cpp  multi_window.cpp  simple.cpp  simple_example.cpp
extensions/: CMakeLists.txt  extensions.cpp
extensions/filter/src/: filter.cpp
extensions/graphics/include/: advance_draw.h  blend_utils.h  draw_flower.h  draw_heart.h  draw_particle.h
extensions/graphics/src/: draw_flower.cpp  draw_heart.cpp  draw_particle.cpp
releases/1.0.0-beta1/: README.md  pa2d.h
